# auth-server

./: .gitignore  README.md  app.py  models.py  pyproject.toml  requirements.txt  vercel.json
api/: app.py  create_client.py  hello.py  index.py  profile.py  register_user.py  requirements.txt  storage.py  test.py  token.py  verify_otp.py
instance/: db.sqlite
src/api/: index.py
src/auth_server/: app.py
