[project]
name = "auth-server"
version = "0.1.0"
description = ""
authors = [
    {name = "moduguvikram",email = "moduguvikram@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flash (>=1.0.3,<2.0.0)",
    "authlib (>=1.3)",
    "flask (>=3.1.2,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "lask (>=0.2.1,<0.3.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "qrcode (>=8.2,<9.0); python_version < '4.0'",
    "pillow (>=12.0.0,<13.0.0)",
    "mangum (>=0.19.0,<0.20.0)"
]

[tool.poetry]
packages = [{include = "auth_server", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
