[tool.poetry]
name = "auth-server"
version = "0.1.0"
description = "OAuth2 Authentication Server with TOTP"
authors = ["moduguvikram <moduguvikram@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
authlib = "^1.3"
sqlalchemy = "^2.0.44"
pyotp = "^2.9.0"
flask-sqlalchemy = "^3.1.1"
qrcode = "^8.2"
pillow = "^12.0.0"
mangum = "^0.19.0"
werkzeug = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
