[tool.poetry]
name = "auth-server"
version = "0.1.0"
description = "OAuth2 Authentication Server with TOTP"
authors = ["moduguvikram <moduguvikram@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "3.12"
pyotp = "^2.9.0"
qrcode = "^8.2"
pillow = "^12.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
